--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,33 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
+<ion-app>
+  <ion-header>
+      <ion-toolbar color="primary">
+          <ion-title>Budget Planner</ion-title>
+      </ion-toolbar>
   </ion-header>
+  <ion-content>
+    
+    <ion-grid>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>New Expense</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-item>
+                <ion-label position="floating">Expense Reason</ion-label>
+                <ion-input type="text"></ion-input>
+              </ion-item>
+          
+              <ion-item>
+                <ion-label position="floating">Expense Amount</ion-label>
+                <ion-input type="number"></ion-input>
+              </ion-item>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+  </ion-content>
+</ion-app>
