--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
       </ion-toolbar>
   </ion-header>
   <ion-content>
-    
+
     <ion-grid>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
@@ -16,17 +16,40 @@
             <ion-card-content>
               <ion-item>
                 <ion-label position="floating">Expense Reason</ion-label>
-                <ion-input type="text"></ion-input>
+                <ion-input type="text" id="input-reason"></ion-input>
               </ion-item>
           
               <ion-item>
                 <ion-label position="floating">Expense Amount</ion-label>
-                <ion-input type="number"></ion-input>
+                <ion-input type="number" id="input-amount"></ion-input>
               </ion-item>
+
+              <div margin-vertical text-right>
+                <ion-button fill="outline" color="danger" id="btn-cancel" (click)="clear()">
+                  <ion-icon slot="start" name="close"></ion-icon> Clear
+                </ion-button>
+                <ion-button id="btn-confirm" (click)="addReason($event)">
+                  <ion-icon slot="start" name="add"></ion-icon>Add Expense
+                </ion-button>
+              </div>
+
             </ion-card-content>
           </ion-card>
         </ion-col>
       </ion-row>
+
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-list id="expenses-list"></ion-list>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <p>Total Expenses: <span id="total-expenses"></span></p>
+        </ion-col>
+      </ion-row>
+
     </ion-grid>
 
   </ion-content>
